Project upgrade to Java 25. IMPORTANT: Mockito now uses bytebuddy in experimental mode. Due to this the full path of mockito-core-jar is required to be specified in an OS env variable named: MAVEN_REPO. This is temporary and required only till bytebuddy(and Mockito) officially supports Java 25.